# Xskill

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  MIGRATION.md  README.md  START_HERE.md  TEST_XSKILL.md  pyproject.toml  xskill-copy-paste.md
.github/workflows/: ci.yml  release.yml  validate.yml
adapters/: README.md  claude-code.md  codex.md  cursor.md  gemini-cli.md  generic.md  github-copilot-cli.md  opencode.md
docs/: architecture.md  case-studies.md  contracts.md  design.md  execution-protocol.md  mapping.md  metrics.md  portable-install.md  release-checklist.md  router.md  state-schema.md
examples/: feature_request.md  use-xskill.md
examples/case-studies/: 01-install-docs.md
install/: README.md
install/claude-code/: README.md  TEST_XSKILL.md
install/codex/: README.md  TEST_XSKILL.md
install/gemini-cli/: README.md
install/github-copilot-cli/: README.md
musk_skills/: __init__.py  cli.py  core.py
scripts/: sync-install-packs.ps1
tests/: test_cli.py  test_core.py
xskill/: README.md
xskill/adaptive-improvement/: SKILL.md
xskill/automate-after-stable/: SKILL.md
xskill/delete-scope/: SKILL.md
xskill/evidence-ledger/: SKILL.md
xskill/examples/: password-reset.compiled-execution-brief.json  password-reset.execution-brief.md  password-reset.iteration-learning-note.md  password-reset.optimize-path.md  password-reset.question-requirements.md  validation-bug.schema-memory-card.md
xskill/learn-after-run/: SKILL.md
xskill/metrics/: SKILL.md
xskill/optimize-path/: SKILL.md
xskill/schema-memory/: SKILL.md
(+84 files in other folders)
