[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "musk-agent-skills"
version = "0.1.0"
description = "A lean Musk 5-Step skill pack and state runtime for AI coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Your Name" }
]
keywords = ["ai-agent", "skills", "claude-code", "codex", "tdd", "context-engineering"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/your-org/musk-agent-skills"
Repository = "https://github.com/your-org/musk-agent-skills"
Issues = "https://github.com/your-org/musk-agent-skills/issues"

[project.scripts]
musk = "musk_skills.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["musk_skills*"]

[tool.setuptools.package-data]
"musk_skills" = ["templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
